Initial commit of sankey-diagram

--- a/demos/hexagon-mesh/hexagon-mesh.html
+++ b/demos/hexagon-mesh/hexagon-mesh.html
@@ -33,28 +33,28 @@
     <script type="text/javascript">
         const hexagon = kgs.widgets.Hexagon.Generator({"container": {"id": "#hexagon", "width": 600, "height": 400}, "radius": 50}).graph();
         hexagon.render({
-            "3": {"fill": "#a6bddb", "text": "KOTLI"},
+            "3": {"fill": "#a6bddb", "text": "JK"},
             "5": {"fill": "#a6bddb", "text": ""},
-            "11": {"fill": "#a6bddb", "text": "POONCH"},
-            "6": {"fill": "#f0f0f0", "text": "KUPWARA"},
-            "13": {"fill": "#f0f0f0", "text": "BARAMULLA"},
-            "18": {"fill": "#f0f0f0", "text": "RAJOURI"},
-            "9": {"fill": "#99d8c9", "text": ""},
-            "10": {"fill": "#99d8c9", "text": "BADGAM"},
-            "15": {"fill": "#99d8c9", "text": ""},
-            "14": {"fill": "#2b8cbe", "text": ""}
+            "11": {"fill": "#a6bddb", "text": "MP"},
+            "6": {"fill": "#f0f0f0", "text": "MH"},
+            "13": {"fill": "#f0f0f0", "text": "OD"},
+            "18": {"fill": "#f0f0f0", "text": "TE"},
+            "9": {"fill": "#99d8c9", "text": "AP"},
+            "10": {"fill": "#99d8c9", "text": "KA"},
+            "15": {"fill": "#99d8c9", "text": "KL"},
+            "14": {"fill": "#2b8cbe", "text": "TN"}
         });
 
         const update = function() {
             hexagon.update({
-                "3": {"fill": "#f6bdfb", "text": "SARAV"},
-                "5": {"fill": "#a6bddb", "text": ""},
-                "11": {"fill": "#a6bddb", "text": "POONCH"},
-                "6": {"fill": "#f0f0f0", "text": "KUPWARA"},
-                "13": {"fill": "#f0f0f0", "text": "BARAMULLA"},
-                "18": {"fill": "#f0f0f0", "text": "RAJOURI"},
-                "9": {"fill": "#99d8c9", "text": ""},
-                "10": {"fill": "#99d8c9", "text": "BADGAM"},
+                "3": {"fill": "#f6bdfb", "text": "NY"},
+                "5": {"fill": "#a6bddb", "text": "NJ"},
+                "11": {"fill": "#a6bddb", "text": "CA"},
+                "6": {"fill": "#f0f0f0", "text": "CO"},
+                "13": {"fill": "#f0f0f0", "text": "CN"},
+                "18": {"fill": "#f0f0f0", "text": "NC"},
+                "9": {"fill": "#99d8c9", "text": "FL"},
+                "10": {"fill": "#99d8c9", "text": "TX"},
                 "15": {"fill": "#99d8c9", "text": ""},
                 "14": {"fill": "#2b8cbe", "text": ""}
             });
