--- a/demos/line-chart/demo.html
+++ b/demos/line-chart/demo.html
@@ -29,12 +29,28 @@
                 top: 94%;
                 left: 50%;
             }
+
+            .tooltip {	
+                position: absolute;			
+                text-align: center;			
+                width: auto;			
+                height: auto;					
+                padding: 2px;				
+                font: 12px sans-serif;		
+                background: lightsteelblue;	
+                border: 0px;		
+                border-radius: 8px;			
+                pointer-events: none;			
+            }
+
         </style>
 	</head>
 	<body>
-        <div id="container" class="main-container">
-            <div id="chart" class="center"></div>
-            <button id="button" class="btn-center" onclick="updateChart()">Update</button>
+        <div id="container" class="main-container1">
+            <div id="chart" class="center1">
+            </div>
+            <div class="tooltip"></span></div>
+            <button id="button" class="btn-center1" onclick="updateChart()">Update</button>
         </div>
     </body>
     <script type="text/javascript" src="./demo.js"></script>
