Changed the tooltip box size

--- a/demos/tooltip/demo.html
+++ b/demos/tooltip/demo.html
@@ -12,11 +12,12 @@
 
             .container { 
                 position: static;
-                background: Green;
+                background:navajowhite;
                 height: 100px;
                 line-height: 40px;
                 text-align: right;
                 width: 200px;
+                border-radius: .25em;
             }
         </style>
 	</head>
